[package]
authors = ["poly000 <pedajilao@vip.qq.com>"]
license = "MIT"
description = "Pet-pet generator in Rust. Translated from https://github.com/camprevail/pet-pet-gif."
name = "petpet"
version = "2.2.0"
edition = "2021"
repository = "https://github.com/poly000/petpet-rs"
default-run = "petpet"

[dependencies]
image = "0.24.0"
once_cell = "1.14.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
# debug = true
