[package]
authors = ["poly000 <pedajilao@vip.qq.com>"]
license = "MIT"
description = "Pet-pet generator in Rust. Translated from https://github.com/camprevail/pet-pet-gif."
name = "petpet"
version = "2.3.1"
rust-version = "1.70"
edition = "2021"
repository = "https://github.com/poly000/petpet-rs"
default-run = "petpet"

[dependencies]
image = { version = "0.24.0", default-features = false }

[build-dependencies]
image = { version = "0.24.0", optional = true, default-features = false }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true

[features]
default = ["encode_to_gif", "bundle_raw_hands"]
bundle_raw_hands = ["dep:image", "image/webp"]
encode_to_gif = ["image/gif"]
